# Scout-Resurrected

./: AUTHORS  ChangeLog  KNOWNBUGS  MACHINES  Makefile  Makefile.am  Makefile.in  NEWS  PLATFORM  README.md  acinclude.m4  aclocal.m4  config.status  configure  configure.in  libtool
doc/: Makefile  Makefile.am  Makefile.in  scout.1  scoutrc  scoutrc.in
include/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in
include/joedog/: Makefile  Makefile.am  Makefile.in  joepath.h
lib/: Makefile  Makefile.am  Makefile.in
lib/joedog/: Makefile  Makefile.in  error.c  error.lo  memory.lo  perl.c  perl.h  util.lo
lib/joedog/.libs/: libjoedog.al
src/: Makefile  Makefile.am  Makefile.in  auth.c  auth.h  cfg.c  client.c  client.h  cookie.c  cookie.h  http.c  http.h  init.c  log.c  log.h  main.c  parser.c  parser.h  queue.c  queue.h  setup.h  sock.c  sock.h  url.c  url.h  util.c  util.h  version.c
utils/: Makefile  Makefile.am  Makefile.in  mkinstalldirs
